--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@ a:visited { color: #205caa; }
 /* Site header */
 
 .site-header {
-  border-top: 5px solid #333;
+  border-top: 5px solid #1f8dd6;
   border-bottom: 1px solid #e8e8e8;
   min-height: 56px;
   background-color: white;
@@ -318,8 +318,7 @@ a:visited { color: #205caa; }
 .highlight .vg { color: #008080 } /* Name.Variable.Global */
 .highlight .vi { color: #008080 } /* Name.Variable.Instance */
 .highlight .il { color: #009999 } /* Literal.Number.Integer.Long */
-.highlignt pre { word-wrap: break-word; }
-
+.highlight pre code { word-wrap: break-word }
 
 /* media queries */
 /* ----------------------------------------------------------*/
